--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -4,6 +4,10 @@ html {
   height: 100%;
 }
 
+#app {
+    min-width: 1400px;
+}
+
 body {
   font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei,
     '\5FAE\8F6F\96C5\9ED1', Arial, sans-serif;
