修复登录页手机端样式bug

--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -4,8 +4,15 @@ html {
   height: 100%;
 }
 
+
 #app {
-    min-width: 1400px;
+  min-width: 1400px;
+}
+
+@media (max-width: 768px) {
+  #app {
+    min-width: auto;
+  }
 }
 
 body {
